--- a/index.html
+++ b/index.html
@@ -29,48 +29,7 @@
 
       <span class="time"></span>
     </header>
-    <!-- <h2>Hey Java Script</h2>
 
-    <p style="color: blue" id="ali">Hello World</p>
-    <button
-      type="button"
-      do
-      onclick="document.getElementById('ali').style.fontSize='100px'"
-      onclick="document.getElementById('ali').style.color='red'"
-    >
-      red
-    </button>
-    <button
-      type="button"
-      onclick="document.getElementById('ali').style.color='green' "
-    >
-      green
-    </button>
-    <button
-      type="button"
-      onclick="document.getElementById('ali').style.color='blue' "
-    >
-      blue
-    </button>
-
-    <button
-      type="button"
-      onclick="document.getElementById('ali').style.fontSize='10px' "
-    >
-      Size : 10px
-    </button>
-    <button
-      type="button"
-      onclick="document.getElementById('ali').style.fontSize='20px' "
-    >
-      Size : 20px
-    </button>
-    <button
-      type="button"
-      onclick="document.getElementById('ali').style.fontSize='30px' "
-    >
-      Size : 30px
-    </button> -->
-    <script src="Day-5-Challenge.js"></script>
+    <script type="module" src="Day-5-Challenge.js"></script>
   </body>
 </html>
