--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <title>Ali</title>
-
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>30-Day-Challenge-Java-Script</title>
     <style>
       header {
         height: 95vh;
@@ -22,14 +23,12 @@
       }
     </style>
   </head>
-
   <body>
     <header>
       <h1>Java Script</h1>
 
       <span class="time"></span>
     </header>
-
-    <script type="module" src="Day-6-Challenge.js"></script>
+    <script src="Day-6-Challenge.js"></script>
   </body>
 </html>
